--- a/blogclient/package.json
+++ b/blogclient/package.json
@@ -3,9 +3,16 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@ckeditor/ckeditor5-alignment": "^41.0.0",
+        "@ckeditor/ckeditor5-basic-styles": "^41.0.0",
         "@ckeditor/ckeditor5-build-classic": "^40.2.0",
         "@ckeditor/ckeditor5-editor-classic": "^40.2.0",
+        "@ckeditor/ckeditor5-essentials": "^41.0.0",
+        "@ckeditor/ckeditor5-heading": "^41.0.0",
         "@ckeditor/ckeditor5-react": "^6.2.0",
+        "@ckeditor/ckeditor5-table": "^41.0.0",
+        "@ckeditor/ckeditor5-theme-lark": "^41.0.0",
+        "@ckeditor/ckeditor5-typing": "^41.0.0",
         "@ckeditor/ckeditor5-upload": "^40.2.0",
         "@fortawesome/fontawesome-svg-core": "^6.5.1",
         "@fortawesome/free-brands-svg-icons": "^6.5.1",
