--- a/blogclient/package.json
+++ b/blogclient/package.json
@@ -6,6 +6,7 @@
         "@ckeditor/ckeditor5-alignment": "^41.0.0",
         "@ckeditor/ckeditor5-basic-styles": "^41.0.0",
         "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+        "@ckeditor/ckeditor5-code-block": "^41.1.0",
         "@ckeditor/ckeditor5-editor-classic": "^40.2.0",
         "@ckeditor/ckeditor5-essentials": "^41.0.0",
         "@ckeditor/ckeditor5-heading": "^41.0.0",
